fix result box width on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -71,6 +71,7 @@ h1 {
 
 .result {
   width: 400px;
+  max-width: 100%;
   height: 320px;
   background-color: rgba(#fff, 0.18);
   border-radius: 12px;
